# foc-simple

./: .gitignore  Cargo.toml  LICENSE-MIT.html  README.md  release_notes.md
.cargo/: config.toml
examples/: Cargo.toml  README.md  build.rs
examples/.cargo/: config.toml
examples/embassy-f103-cb/: Cargo.toml
examples/embassy-f103-cb/.cargo/: config.toml
examples/embassy-f103-cb/src/foc_impl/: hall_sensor_impl.rs  mod.rs  pwm_driver.rs
examples/rtic-f103-cb/: Cargo.toml  build.rs
examples/rtic-f103-cb/src/foc_impl/: mod.rs  pwm_driver.rs
examples/rtic-storm32/: Cargo.toml
examples/storm32/: Cargo.toml
examples/storm32/.cargo/: config.toml
examples/storm32/src/: lib.rs
examples/storm32/src/foc_impl/: mod.rs
examples/storm32/tests/: example_test.rs
src/: lib.rs
src/foc/: foc_current.rs  foc_embassy.rs  foc_hall_sensor.rs  foc_pwm.rs  foc_rtic.rs  foc_simple.rs  mod.rs
src/tools/: foc_command.rs  foc_pid.rs  mod.rs  shaft_position.rs
