[package]
authors = ["asmeenk12@gmail.com>"]
categories = [
  "embedded",
  "science::robotics",
  "no-std",
  "no-std::no-alloc",
]
description = "A simple and easy to use implementation of the Field Oriented Control (foc) for brushless motors."
edition = "2021"
homepage = "https://github.com/smeenka/foc-simple"
keywords = ["foc", "bldc", "motor", "vector-control"]
license = "MIT OR Apache-2.0"
name = "foc-simple"
repository = "https://github.com/smeenka/foc-simple"
version = "0.1.2"

[dependencies]
cordic = "0.1.5"
cortex-m = {version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.0"
defmt = "1.0.1"
embedded-hal = "0.2.6"
fixed = "1.27.0"
foc = "0.3.0"
heapless = {version = "0.7.5", default-features = false}
panic-probe = {version = "1.0.0", features = ["print-defmt"]}
rtt-target = {version = "0.6.1", features = ["log", "defmt"]}

embassy-futures = {version = "0.1.1", features = ["defmt"]}
embassy-sync = {version = "0.7.0", features = ["defmt"]}
embassy-time = {version = "0.4.0", features = ["tick-hz-32_768"], optional = true}

rtic-time = {version = "2.0.1", features = [], optional = true}

[profile.release]
# disable lto optimazation
debug = 2
lto = true

[profile.dev]
opt-level = "s"

[dev-dependencies]
env_logger = "0.9.0"
log = "0.4.14"

[features]
embassy = ["embassy-time"]
rtic = ["rtic-time"]
