[package]
authors = ["asmeenk12@gmail.com>"]
categories = [
  "embedded",
  "science::robotics",
  "no-std",
  "no-std::no-alloc",
]
edition = "2021"
keywords = ["foc", "bldc", "motor", "vector-control", "nucleo-f103_cb"]
license = "MIT OR Apache-2.0"
name = "embassy-f103-cb"
version = "0.1.0"

[dependencies]
as5600 = {version = "0.8.0"}
cordic = "0.1.5"
cortex-m = {version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.0"
defmt = "1.0.1"
embedded-hal = "0.2.6"
fixed = "1.27.0"
foc = "0.3.0"
foc-simple = {path = "../../", version = "0.1.0", features = ["embassy"]}
heapless = {version = "0.7.5", default-features = false}
log = {version = "0.4.27"}
panic-probe = {version = "1.0.0", features = []}
rtt-target = {version = "0.6.1", features = ["log", "defmt"]}
smart-leds-trait = "0.2.1"

[dependencies.embassy-stm32]
features = ["defmt", "exti", "memory-x", "stm32f103rb", "time", "time-driver-any"]
version = "0.2.0"

[dependencies.embassy-executor]
features = ["defmt", "executor-thread", "arch-cortex-m"]
version = "0.7.0"

[dependencies.embassy-sync]
features = ["defmt"]
version = "0.7.0"

[dependencies.embassy-time]
features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]
version = "0.4.0"

[dev-dependencies]
embedded-test = {version = "0.6.0", features = ["embassy"]}
env_logger = "0.9.0"
log = "0.4.14"

[dependencies.embassy-futures]
features = ["defmt"]
version = "0.1.1"
